--- a/css/main.css
+++ b/css/main.css
@@ -75,8 +75,6 @@ height: 210px;
   display: flex;
 }
 
-
-}
 .intro, .title, .concl{
   text-align: center;
 }
@@ -113,10 +111,10 @@ height: 210px;
 .secondStoryUpper, .secondStoryMiddle, .secondStoryDown {
   display: flex;
   flex-direction: row;
-  font-family: Inconsolata
+  font-family: Inconsolata;
   font-size:16px;
-
 }
+
 .paragraph1 {
   width: 440px;
   margin-top: 30px;
